working on addNew page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#5ed1a9</color>
+    <color name="colorPrimaryDark">#41B3A3</color>
+    <color name="colorAccent">#8D1F44</color>
     <color name="semiTransparent">#14111111</color>
 </resources>
