--- a/app/src/main/res/layout/activity_add_new_material.xml
+++ b/app/src/main/res/layout/activity_add_new_material.xml
@@ -174,23 +174,35 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:background="@drawable/formwithborder">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_department_black_24dp"
+                        android:layout_gravity="center"
+                        android:padding="20dp"/>
                     <Spinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="30dp"/>
                 </LinearLayout>
-                <EditText
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Programme"
-                    android:inputType="textEmailAddress"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:drawableStart="@drawable/ic_department_black_24dp"
-                    android:background="@drawable/formwithborder"
-                    android:drawablePadding="15dp"
-                    android:padding="20dp"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/formwithborder">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_course_black_24dp"
+                        android:layout_gravity="center"
+                        android:padding="20dp"/>
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="30dp"/>
+                </LinearLayout>
 
                 <!--MATERIAL-->
                 <TextView
@@ -204,17 +216,21 @@
                     android:layout_marginEnd="40dp"
                     android:layout_marginBottom="15dp"/>
                 <TextView
-                    android:id="@+id/addNew_lecturerNameET"
+                    android:id="@+id/addNew_fileTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="~~ Select file ( pdf, txt, doc, docx ) ~~"
-                    android:inputType="text"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:drawableStart="@drawable/ic_book_black_24dp"
                     android:background="@drawable/formwithborder"
                     android:drawablePadding="15dp"
-                    android:padding="20dp"/>
+                    android:padding="20dp"
+                    android:clickable="true"
+                    android:focusable="true" />
 
             </LinearLayout>
 
