--- a/app/src/main/res/layout/activity_add_new_material.xml
+++ b/app/src/main/res/layout/activity_add_new_material.xml
@@ -203,6 +203,25 @@
                         android:layout_height="wrap_content"
                         android:padding="30dp"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/formwithborder">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_stars_black_24dp"
+                        android:layout_gravity="center"
+                        android:padding="20dp"/>
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="30dp"/>
+                </LinearLayout>
+
 
                 <!--MATERIAL-->
                 <TextView
@@ -231,7 +250,18 @@
                     android:padding="20dp"
                     android:clickable="true"
                     android:focusable="true" />
-
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Author"
+                    android:inputType="text"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:drawableStart="@drawable/ic_edit_black_24dp"
+                    android:background="@drawable/formwithborder"
+                    android:drawablePadding="15dp"
+                    android:padding="20dp"
+                    android:layout_marginTop="10dp"/>
             </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
