--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/sign_up_name_text_input_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Business Name"
+                android:hint="Full Name"
                 android:inputType="text"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -52,7 +52,7 @@
                 android:id="@+id/sign_up_email_text_input_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Business Email"
+                android:hint="Email"
                 android:inputType="textEmailAddress"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -67,40 +67,10 @@
                 android:id="@+id/sign_up_phone_text_input_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Business Phone"
+                android:hint="Phone"
                 android:inputType="phone"/>
 
         </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/sign_up_location_text_input_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/sign_up_location_text_input_edittext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Business location(s)"
-                android:inputType="textEmailAddress"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Business Type"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
-        <Spinner
-            android:id="@+id/sign_up_type_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/sign_up_password_text_input_layout"
@@ -147,7 +117,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="Create"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:isScrollContainer="false"/>
 
         <TextView
