--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_fancy_bg"
     android:id="@+id/Sign_in_layout_ID"
     tools:context=".SignIn">
 
@@ -76,9 +75,17 @@
                 android:backgroundTintMode="add"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginBottom="15dp"
                 android:text="login"
                 android:textColor="#FFFFFF"
                 android:isScrollContainer="false"/>
+
+            <View
+                android:layout_width="2dp"
+                android:layout_height="13dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/colorAccent"
+                android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/gotoSignUpTV"
@@ -86,9 +93,28 @@
                 android:layout_height="wrap_content"
                 android:text="Create an account."
                 android:gravity="center_horizontal"
+                android:layout_margin="7dp"
+                android:padding="7dp"
+                android:textSize="12sp"/>
+
+            <View
+                android:layout_width="2dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/colorAccent"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/student_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="LOGIN AS STUDENT"
+                android:textStyle="bold"
+                android:gravity="center_horizontal"
                 android:layout_margin="10dp"
                 android:padding="10dp"
-                android:textSize="12sp"/>
+                android:textSize="14sp"/>
+
         </LinearLayout>
     </ScrollView>
 
