--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -117,7 +117,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="Create"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:isScrollContainer="false"/>
 
         <TextView
