--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -95,7 +95,8 @@
                 android:gravity="center_horizontal"
                 android:layout_margin="7dp"
                 android:padding="7dp"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                android:background="#12423F3F"/>
 
             <View
                 android:layout_width="2dp"
@@ -113,7 +114,8 @@
                 android:gravity="center_horizontal"
                 android:layout_margin="10dp"
                 android:padding="10dp"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:background="#12423F3F"/>
 
         </LinearLayout>
     </ScrollView>
