--- a/app/src/main/res/layout/activity_add_materials.xml
+++ b/app/src/main/res/layout/activity_add_materials.xml
@@ -7,11 +7,93 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddMaterials">
 
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/add_material_AppBar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/add_material_CollapsingToolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:expandedTitleGravity="bottom|center_horizontal"
+            app:expandedTitleMarginBottom="60dp"
+            app:collapsedTitleGravity="center_vertical"
+            app:titleEnabled="true"
+            android:textAlignment="center"
+            app:contentScrim="@color/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:fitsSystemWindows="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="0dp"
+                android:paddingBottom="3dp"
+                android:fitsSystemWindows="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/show_level"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Level"
+                    android:padding="10dp"/>
+                <TextView
+                    android:id="@+id/show_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="course code"
+                    android:padding="10dp"/>
+                <TextView
+                    android:id="@+id/show_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="course name"
+                    android:padding="10dp"/>
+                <TextView
+                    android:id="@+id/show_programme"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="programme"
+                    android:padding="10dp"/>
+                <TextView
+                    android:id="@+id/show_dept"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="dept"
+                    android:padding="10dp"/>
+
+            </LinearLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/add_material_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                app:popupTheme="@style/AppTheme"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin"
+                app:titleTextColor="#ffffff"
+                android:fitsSystemWindows="false" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+
+    </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/add_material_recyclerView"
@@ -19,9 +101,7 @@
                 android:layout_height="match_parent">
 
             </android.support.v7.widget.RecyclerView>
-
         </LinearLayout>
-
     <android.support.design.bottomappbar.BottomAppBar
         android:id="@+id/bottom_app_bar"
         android:layout_width="match_parent"
@@ -41,5 +121,5 @@
         android:backgroundTint="#105a7c"
         android:src="@android:drawable/ic_menu_add"
         app:layout_anchor="@id/bottom_app_bar"/>
-
+</android.support.design.widget.CoordinatorLayout>
 </android.support.design.widget.CoordinatorLayout>
