--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/profile"
-        android:title="Logout"
+        android:title="Profile"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_account_box_black_24dp"/>
 
