--- a/app/src/main/res/layout/add_materials_items.xml
+++ b/app/src/main/res/layout/add_materials_items.xml
@@ -44,7 +44,8 @@
             android:layout_alignParentBottom="true"
             android:padding="15dp"
             android:background="@color/semiTransparent"
-            android:layout_below="@+id/add_material_item_IV">
+            android:layout_below="@+id/add_material_item_IV"
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/add_material_item_name"
@@ -52,7 +53,16 @@
                 android:layout_height="wrap_content"
                 android:text="Title"
                 android:ellipsize="marquee"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:layout_weight="0.3"/>
+
+            <ImageView
+                android:id="@+id/add_material_download"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_file_download_black_24dp"
+                android:layout_weight="1.7"
+                android:contentDescription="download"/>
 
         </LinearLayout>
 
