--- a/app/src/main/res/layout/activity_add_new_material.xml
+++ b/app/src/main/res/layout/activity_add_new_material.xml
@@ -97,12 +97,12 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
             android:layout_marginBottom="0dp"
-            android:fillViewport="true"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:background="@android:color/white"
-            android:paddingBottom="40dp">
+            android:clipToPadding="false"
+            android:fillViewport="true"
+            android:paddingBottom="40dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -114,87 +114,99 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DEPARTMENT"
-                    android:textSize="35sp"
-                    android:fontFamily="sans-serif-light"
-                    android:layout_marginTop="50dp"
                     android:layout_marginStart="40dp"
+                    android:layout_marginTop="50dp"
                     android:layout_marginEnd="40dp"
-                    android:layout_marginBottom="15dp"/>
+                    android:layout_marginBottom="15dp"
+                    android:fontFamily="sans-serif-light"
+                    android:text="DEPARTMENT"
+                    android:textSize="35sp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:background="@drawable/formwithborder">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_department_black_24dp"
                         android:layout_gravity="center"
-                        android:padding="20dp"/>
+                        android:padding="20dp"
+                        android:src="@drawable/ic_department_black_24dp" />
+
                     <Spinner
                         android:id="@+id/addNew_dept_Spinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/formwithborder">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_course_black_24dp"
                         android:layout_gravity="center"
-                        android:padding="20dp"/>
+                        android:padding="20dp"
+                        android:src="@drawable/ic_course_black_24dp" />
+
                     <Spinner
                         android:id="@+id/addNew_programme_Spinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/formwithborder">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_stars_black_24dp"
                         android:layout_gravity="center"
-                        android:padding="20dp"/>
+                        android:padding="20dp"
+                        android:src="@drawable/ic_stars_black_24dp" />
+
                     <Spinner
                         android:id="@+id/addNew_level_Spinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/formwithborder">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_local_library_black_24dp"
                         android:layout_gravity="center"
-                        android:padding="20dp"/>
+                        android:padding="20dp"
+                        android:src="@drawable/ic_local_library_black_24dp" />
+
                     <Spinner
                         android:id="@+id/addNew_semester_Spinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center" />
                 </LinearLayout>
 
 
@@ -202,51 +214,53 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="MATERIAL"
-                    android:textSize="35sp"
-                    android:fontFamily="sans-serif-light"
-                    android:layout_marginTop="50dp"
                     android:layout_marginStart="40dp"
+                    android:layout_marginTop="50dp"
                     android:layout_marginEnd="40dp"
-                    android:layout_marginBottom="15dp"/>
+                    android:layout_marginBottom="15dp"
+                    android:fontFamily="sans-serif-light"
+                    android:text="MATERIAL"
+                    android:textSize="35sp" />
+
                 <TextView
                     android:id="@+id/addNew_fileTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="~~ Select file ( pdf, txt, doc, docx ) ~~"
-                    android:textColor="#000000"
-                    android:gravity="center"
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:drawableStart="@drawable/ic_picture_as_pdf_black_24dp"
                     android:background="@drawable/formwithborder"
-                    android:drawablePadding="15dp"
-                    android:padding="20dp"
                     android:clickable="true"
-                    android:focusable="true" />
+                    android:drawableStart="@drawable/ic_picture_as_pdf_black_24dp"
+                    android:drawablePadding="15dp"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:hint="~~ Select file ( pdf, txt, doc, docx ) ~~"
+                    android:padding="20dp"
+                    android:textColor="#000000" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/addNew_recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="20dp">
+
                 </android.support.v7.widget.RecyclerView>
 
                 <Button
                     android:id="@+id/upload_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="25dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="15dp"
                     android:background="@drawable/bg_button_rounded"
                     android:backgroundTint="@color/colorAccent"
                     android:backgroundTintMode="add"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="15dp"
+                    android:isScrollContainer="false"
                     android:text="Create Class"
-                    android:textColor="#FFFFFF"
-                    android:isScrollContainer="false"/>
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
