--- a/app/src/main/res/layout/activity_upload_material.xml
+++ b/app/src/main/res/layout/activity_upload_material.xml
@@ -82,7 +82,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="15dp"
-        android:text="Create Class"
+        android:text="Add Materials"
         android:textColor="#FFFFFF"
         android:isScrollContainer="false"/>
 </LinearLayout>
