--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
+        app:srcCompat="@drawable/ic_add_black_24dp"
         android:contentDescription="New"
         app:backgroundTint="@color/colorPrimaryDark"/>
 </android.support.design.widget.CoordinatorLayout>
