--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Profile"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/Id_Profile">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
