profile side rechecked

--- a/app/src/main/res/layout/activity_add_materials.xml
+++ b/app/src/main/res/layout/activity_add_materials.xml
@@ -11,6 +11,10 @@
 <android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/add_material_AppBar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -35,19 +39,25 @@
 
     </android.support.design.widget.AppBarLayout>
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:orientation="vertical">-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/add_material_recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
             </android.support.v7.widget.RecyclerView>
-        <!--</LinearLayout>-->
+
+            <ProgressBar
+                android:id="@+id/add_material_progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"/>
+        </RelativeLayout>
+    </LinearLayout>
     <android.support.design.bottomappbar.BottomAppBar
         android:id="@+id/bottom_app_bar"
         android:layout_width="match_parent"
