student side changes

--- a/app/src/main/res/layout/activity_student_materials.xml
+++ b/app/src/main/res/layout/activity_student_materials.xml
@@ -40,39 +40,48 @@
                     android:layout_marginLeft="40dp"
                     android:layout_marginRight="0dp"
                     android:orientation="vertical">
-
+                    <TextView
+                        android:id="@+id/student_show_code"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="course code"
+                        android:padding="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#ffffff"/>
                     <TextView
                         android:id="@+id/student_show_level"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Level"
                         android:padding="10dp"
-                        android:layout_marginTop="10dp"/>
-                    <TextView
-                        android:id="@+id/student_show_code"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="course code"
-                        android:padding="10dp"/>
+                        android:textSize="18sp"
+                        android:textColor="#ffffff"/>
                     <TextView
                         android:id="@+id/student_show_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="course name"
-                        android:padding="10dp"/>
+                        android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#ffffff"/>
                     <TextView
                         android:id="@+id/student_show_programme"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="programme"
-                        android:padding="10dp"/>
+                        android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#ffffff"/>
                     <TextView
                         android:id="@+id/student_show_dept"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="dept"
                         android:ellipsize="marquee"
-                        android:padding="10dp"/>
+                        android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#ffffff"/>
 
                 </LinearLayout>
 
@@ -105,24 +114,5 @@
 
         </android.support.v7.widget.RecyclerView>
         <!--</LinearLayout>-->
-        <android.support.design.bottomappbar.BottomAppBar
-            android:id="@+id/student_bottom_app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:fabAlignmentMode="center"
-            android:backgroundTint="#3498db"
-            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-            android:elevation="30dp"
-            app:hideOnScroll="true">
-        </android.support.design.bottomappbar.BottomAppBar>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/student_material_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#105a7c"
-            android:src="@android:drawable/ic_menu_add"
-            app:layout_anchor="@id/student_bottom_app_bar"/>
     </android.support.design.widget.CoordinatorLayout>
 </android.support.design.widget.CoordinatorLayout>
