--- a/app/src/main/res/layout/add_materials_items.xml
+++ b/app/src/main/res/layout/add_materials_items.xml
@@ -65,7 +65,10 @@
                 android:contentDescription="download"/>
 
         </LinearLayout>
-
+    <TextView
+        android:id="@+id/get_code_for_files"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
